[package]
name = "snaek_rust"
version = "0.1.0"
authors = ["mkulagowski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
itertools-num = "0.1.3"
ggez = "0.5.1"
rand = "0.8.2"
lazy_static = "1.4.0"